<resources>
    <string name="app_name">LetsChat</string>
    <string name="app_sign_in">Sign In</string>
    <string name="app_sign_up">Sign Up</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="email_username">Email Id or Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Log In</string>
    <string name="login_register">New user? Sign Up</string>
    <string name="register">Sign up</string>
    <string name="user_id">Username</string>
    <string name="title_activity_profile">Edit Profile</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add User!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Confirm ?</string>
    <string name="cancel">Cancel</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_username">Forgot username?</string>
    <string name="sign_in_advice">Sign in with your email id</string>
    <string name="action_search">Search People</string>
    <string name="share">Share </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>



    <string name="ok">Ok</string>
    <string name="permission_camera_rationale">Permission needed</string>
    <string name="permission_contacts_rationale">Permission needed</string>
    <string name="version">Version 1.0.0</string>
    <string name="copyright">Copyright 2018</string>
    <string name="contacts_string">%2$s</string>
    <string name="edit_profile_names">Full Name</string>
    <string name="edit_profile_email">user@test.com</string>
    <string name="edit_profile_display_name">Profile name</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Hobby/Interest</string>
    <string name="select_date">Calender</string>
    <string name="save_edit">Update Information</string>
    <string name="send_via" >Share via</string>

    <string-array name="Relationship">
        <item name="Single"/>
        <item name="Engaged"/>
        <item name="Married"/>
        <item name="Divorce"/>
    </string-array>

    <string name="phone_hint">54444444</string>

    <string name="terms_title">DISCALIMER OF WARRANNTIES; LIABILITY LIMITATION</string>
    <string name="terms">There is no guarantee, representation, or warranty that your use of this LetsChat app will be uninterrupted or error-free, and you agree that from time to time this service may be removed for indefinite period of time, or cancel the service at any time, without prior notice to you.
+\n\n
You expressly agree that your use of, or inability to use this service is at your sole risk. This service and all products and services delivered to you through this LetChat app are provided "as is' and "as available for use, without warranty of any kind, either express
or implied, including all implied warranty or merchantability, fitness for particular purpose, title, and infringement.
	</string>

    <string name="policies_title">Policies Information</string>
    <string name="policies">Privacy Laws
If so you may already be under the obligation to include a privacy policy: according to the California AG’s interpretation of CalOPPA, applications that collect personal user data must conspicuously post a privacy policy detailing, clearly and completely, how the application collects, uses, and shares personal data. This rule applies globally to any mobile application that may impact a California consumer. Therefore, if your application possibly provides value to a California resident you are already bound to these rules. App developers that do not comply with CalOPPA by posting a privacy policy for their app can be held accountable under California law.
+\n\n
Last year AG Harris and the six leading mobile application platform providers agreed to bring the mobile application industry into compliance with the terms of CalOPPA following this two-page Joint Statement of Principles. More, dedicated State laws are very likely to be coming up soon.
+\n\n
Lets assume you have an app that is geared towards European users. The picture doesn’t change. The relevant EU legal framework is the Data Protection Directive (95/46/EC). It applies in any case where the use of apps on smart devices involves processing personal data of individuals. Basically whenever your app is used in the EU, even if you are not residing there (the national law of a Member State is also applicable in cases where the controller is not established on Community territory and makes use of equipment situated on the territory of that Member State. Since the device is instrumental in the processing of personal data from and about the user, this criterion is usually fulfilled), you need to ensure compliance with all the requirements defined under the Data Protection Directive.</string>

    <string name="help_title">Help Information</string>
    <string name="help">Need help...</string>

    <string name="faq_title">FAQ</string>
    <string name="faq">
        Download and Installation +\n\n
        Managing Profile +\n\n
        Verifying Account +\n\n
        Chats +\n\n
        Privacy +\n\n
        Changing Status +\n\n
        Troubleshooting the app
    </string>

    <string name="app_info_title">Application Information</string>
    <string name="app_info"> LetsChat</string>

</resources>
