<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_huge">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <TextView
        android:id="@+id/text_advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_advice"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/margin_big"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_text_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_username"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/margin_big"
            android:text="@string/app_sign_in"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/button_register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/login_register"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_login"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/forgot_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/button_login"
            android:text="@string/forgot_username"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>