<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schema.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background"
    tools:context="com.projects.adetunji.letschat.uis.activities.EditProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/teal_400"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_big"
        android:layout_marginTop="55dp"
        android:orientation="vertical"
        android:background="@drawable/background"
        >

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_profile_names"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="@dimen/padding_avg"
            android:textSize="@dimen/_12sdp"

            android:textColor="@color/black" />

        <EditText
            android:id="@+id/profile_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_profile_display_name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/padding_avg"
            android:textSize="@dimen/_12sdp"

            android:textColor="@color/black"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/profile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_profile_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/padding_avg"
            android:textSize="@dimen/_12sdp"

            android:textColor="@color/black"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/profile_hobby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_profile_hobby"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/padding_avg"
            android:textSize="@dimen/_12sdp"

            android:textColor="@color/black"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:id="@+id/select_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/profile_birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin_small" />

            <Button
                android:id="@+id/profile_birth_button"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_avg"
                android:textColor="@color/white"
                android:text="@string/select_date"
                android:background="@color/teal_400"
                android:hint="1900-01-30"
                android:layout_weight="2"
                android:textAllCaps="false"/>

        </LinearLayout>

        <Button
            android:id="@+id/save_edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:background="@color/teal_400"
            android:padding="@dimen/padding_small"
            android:text="@string/save_edit"
            android:textColor="@color/white"
            android:textAllCaps="false"/>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>