<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_huge" >

    <TextView
        android:id="@+id/text_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:textColor="@color/red_700"
        android:textSize="12sp"
         />
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/edit_text_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_id"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_text_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"

            android:textAllCaps="false"
            android:text="@string/register" />

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Terms"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/policies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Policies"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"  />

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Help"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <android.support.v4.widget.Space
        android:id="@+id/spaceReg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_avg" />



</LinearLayout>